tests/machine/x/fs/string_compare.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/string_compare.fs(4,20): error FS0001: This expression was expected to have type
    unit    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/string_compare.fs(4,1): warning FS0020: This expression should have type 'unit', but has type 'bool'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/machine/x/fs/string_compare.fs(5,21): error FS0001: This expression was expected to have type
    unit    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/string_compare.fs(5,1): warning FS0020: This expression should have type 'unit', but has type 'bool'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/machine/x/fs/string_compare.fs(6,20): error FS0001: This expression was expected to have type
    unit    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/string_compare.fs(6,1): warning FS0020: This expression should have type 'unit', but has type 'bool'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.

/workspace/mochi/tests/machine/x/fs/string_compare.fs(7,21): error FS0001: This expression was expected to have type
    unit    
but here has type
    string    

/workspace/mochi/tests/machine/x/fs/string_compare.fs(7,1): warning FS0020: This expression should have type 'unit', but has type 'bool'. Use 'ignore' to discard the result of the expression, or 'let' to bind the result to a name.
