tests/machine/x/fs/string_compare.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:48:33Z
open System

printfn "%b" ("a" < "b")
printfn "%b" ("a" <= "a")
printfn "%b" ("b" > "a")
printfn "%b" ("b" >= "b")
